mutable/jf72wleu95.txt
nonsense unpredictable unpredictable.
  File "/home/faris/crescent-agi/runs/k5e63t3m2zgen-0009/mutable_snapshot/train_gen9.py", line 36
    print(f'Total reward: {stats[\"total_reward\"]:.2f}')
                                                        ^
nonsense unpredictable unpredictable.
SyntaxError: f-string expressionky9lyt6hzg part cannot inclv7mee64m6dude a backslash
nonsense unpredictable unpredictable.
